1. fixed bug with folder creation from "Quick Filter" dialog    (turned out to be a MEventManager problem) 2. fixed folder from folder tree not in the main frame 3. fixed "folder is locked" assert 4. fixed "invalid message index" in wxFolderView::OnMsgStatusEvent() assert 5. removed math mode from the Manual as it apparently doesn't work 6. filtering new mail ignores deleted messages, so filters are not reapplied    to the messages previously deleted by other filters

--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -2152,11 +2152,7 @@ Folders
  be asked for the confirmation.
  They also allow to set a similar threshold for the number of message headers
  retrieved: you will be asked before retrieving more than the specified
- number of headers (default is 
-\begin_inset Formula \( 100 \)
-\end_inset 
-
-) from server.
+ number of headers (default is 100) from server.
  This limit is called 
 \begin_inset Quotes eld
 \end_inset 
@@ -2174,11 +2170,7 @@ hard
 \end_inset 
 
  one which can be set in the same page.
- The hard limit, if set (it has value 
-\begin_inset Formula \( 0 \)
-\end_inset 
-
-, i.e.
+ The hard limit, if set (it has value 0, i.e.
  disabled, by default) says that at most that many message headers will
  be downloaded.
  Unlike the soft limit, it is unconditional and no questions will be asked
