--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -196,7 +196,7 @@ It is now possible to import all folder files in MBOX (Unix) format using
 \begin_inset Quotes erd
 \end_inset 
 
-Folde|Import folder tree...
+Folder|Import folder tree...
 \begin_inset Quotes erd
 \end_inset 
 
