1. fixed stupid typo in 'D' handling (does it fix the "freeze"? it should...) 2. and now handle all commands affecting messages in this way, i.e. unselect    the message if it was the only one selected 3. Windows version shows some ugly help - better than nothing anyhow

--- a/TODO
+++ b/TODO
@@ -4,10 +4,7 @@ $Id$
 
 *** going back to using this file temporarily until bug tracker is back online
 
-1. why folder is opened and its listing is built when a message is appended to
-   it? very time consuming, can we avoid it?
-   
---> because of CountInterestingMessages() call - should cache it
+1. TABs in msg view?
 
 3. problems with calling wxYield() multiple times (under wxGTK) - what to do?
 
