--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ $Id$
 
 1. TABs in msg view?
 
+2. deleted msgs still filtered (not updated yet!)
+
 3. problems with calling wxYield() multiple times (under wxGTK) - what to do?
 
 4. folder opened in the main frame is still sometimes leaked on exit!
