1. setting progress threshold to 0 does prevent progress dlg from appearing 2. filters now really ignore the messages deleted during the evalutation of    previous filters, so now duplicated copies of the same message are    scattered around across all folders any more 3. indicate that ext editor is running in the composer title

--- a/TODO
+++ b/TODO
@@ -6,11 +6,11 @@ $Id$
 
 1. TABs in msg view?
 
-2. deleted msgs still filtered (not updated yet!)
-
 3. problems with calling wxYield() multiple times (under wxGTK) - what to do?
 
 4. folder opened in the main frame is still sometimes leaked on exit!
+
+5. dropping msgs to a newly created folder doesn't show them there
 
 *********************************************************************
 *** BUGS
