--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+28.02.01 VZ: indicate the external editor status in the composer window title
+             filters don't get applied to deleted messages any more
 21.02.01 VZ: added hard limit on the number of headers retrieved
              show filters progress in the status bar
 20.02.01 VZ: made new mail reporting less intrusive
