1. bug 383 fixed, now can create quick filter on recepients too and apply it    immediately 2. fixed bug with leaving the old message in the preview window when switching    to another folder 3. enhanced MTextDialog slightly

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+07.03.01 VZ: quick filter enhancements: now can filter on recepients too
 28.02.01 VZ: indicate the external editor status in the composer window title
              filters don't get applied to deleted messages any more
 21.02.01 VZ: added hard limit on the number of headers retrieved
