--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,14 @@
       This file contains the detailed list of the user visible changes in
-      Mahogany, you can use it to find all the changes between releases.
+      Mahogany, you can use it to find all important changes between releases.
+      Please refer to the cvs update list archives for the detailed list of
+      all changed
 
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
-12.03.01 VZ: MIME parsing is finally correct - and more efficient, too
+15.03.01 VZ: added "Synchronize" page to the options dialog
+14.03.01 VZ: propose to retrieve all mailboxes from IMAP servers when opening
+12.03.01 VZ: MIME parsing is finally (almost) correct - and more efficient, too
 07.03.01 VZ: quick filter enhancements: now can filter on recepients too
 28.02.01 VZ: indicate the external editor status in the composer window title
              filters don't get applied to deleted messages any more
