1. added Shift-Ctrl-A shortcut for "select all unread" 2. changed module search path slightly 3. fixed crash in splash screen dtor which I inadvertently introduced in the    last commit 4. added MH_OPAGE_SYNC help topic

--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -4369,7 +4369,7 @@ Remote configuration synchronisation settings
 Please refer to the section below for a detailed explanation.
 \layout Subsection
 
-Remote configuration synchronisation
+Remote configuration synchronisation_4109_
 \layout Standard
 
 Mahogany can automatically save a subset of its configuration settings in
