1. made initial msg selection in the folder view slightly smarter 2. fixed crash in debug tracing code in mm_notify() 3. fixed "show to" for newsgroups 4. and also building the listing for a newsgroup with some read messages 5. added helpdir setting to the options dlg 6. disable lang menu if no msg is previewed

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+16.03.01 VZ: more flexible initial msg selection in the folder viewer
+             reading newsgroups doesn't crash the program and works somehow
 15.03.01 VZ: added "Synchronize" page to the options dialog
 14.03.01 VZ: propose to retrieve all mailboxes from IMAP servers when opening
 12.03.01 VZ: MIME parsing is finally (almost) correct - and more efficient, too
