fixing typo. Vadim, is it correct?

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
       This file contains the detailed list of the user visible changes in
       Mahogany, you can use it to find all important changes between releases.
       Please refer to the cvs update list archives for the detailed list of
-      all changed
+      all changes.
 
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
